mirroring with main website

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
                 <li><b>Office hours</b> (Zoom links on Canvas):
                     <ul>
                          <!-- TODO -->
-                        <li>TBD (Shreya)</li>
-                        <li>TBD (Soham)</li>
+                        <li>Shreya: Mondays, 10:00 am - 11:00 am PST</li>
+                        <li>Soham: Thursdays, 10:00 am - 11:00 am PST</li>
                     </ul>
                 </li>
                 <li><b>Grading</b>: Five homeworks (90%) and discussion participation on Zoom + Piazza (10%).</li>
+                <li><b>Late Day Policy</b>: Students will have <b>5</b> late days to use during the whole quarter, but no more than <b>2</b> late days can be used for a single homework</li>
                 <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href="http://piazza.com/stanford/spring2021/cs329t">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
                     <i>cs329t-spr2021-staff@lists.stanford.edu</i>.</li>
                 <li><b>Academic accommodations</b>: If you need an academic accommodation based on a disability, you should initiate the request with the <a href="https://oae.stanford.edu/accommodations/academic-accommodations">Office of Accessible Education (OAE)</a>.
