--- a/syllabus.html
+++ b/syllabus.html
@@ -24,7 +24,7 @@
     <div class="container sec" id="schedule" style="margin-top:-20px"><br>
         <h2><i class="far fa-calendar-alt"> </i> Schedule & syllabus</h2>
         <p>
-            The lecture slides, notes, labs, and assignments will be posted online here as the course progresses. All the pre-recorded lectures would be uploaded Monday every week on Canvas.<br>
+            The lecture slides,abs, and assignments will be posted online here as the course progresses. All the pre-recorded lectures would be uploaded Monday every week on Canvas.<br>
             Lecture times are <b>2:30-3:50pm PST</b>. All deadlines are at <b>11:59pm PST</b>.
         </p>
         <p>
@@ -60,7 +60,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                        Slides
                     </td>
                     <td>Pre-recorded lecture</td>
@@ -71,8 +70,7 @@
                     <td>Orientation, overview Fireside chat, course QA and introduce final project
                     </td>
                     <td>
-                        Note<br>
-                        Slides
+                        <a href="slides/part1-week1-video01-overview.pdf" target="_blank">Slides</a><br>
                     </td>
                     <td>Fireside chat Lecture</td>
                 </tr>
@@ -82,9 +80,13 @@
                     <td>Troubleshooting Homework 0 <br> Intro to Homework 1
                     </td>
                     <td>
-                        Slides
+                        <a href="slides/CS329T_Lab1.pdf" target="_blank">Slides</a>
                     </td>
-                    <td>Lab<br><br>Homework 1 released: <br><br>
+                    <td>Lab<br><br>Homework 1 <font color="green">Released:</font><br>
+                        [<a href="homeworks/hw1/CS329T_HW1.pdf" target="_blank">pdf</a>]<br>
+                        [<a href="homeworks/hw1/CS329T_HW1_Code.zip">Code</a>]<br>
+                        [<a href="homeworks/hw1/CS329T_HW1_Written.zip">Written Template</a>]
+                        <br><br>
                     Description: Homework 1 is designed to make sure you are comfortable with ML fundamentals that will be needed in this course.
                     If you are struggling with parts of this assignment, consider whether you meet the prerequisites. <br><br>
                     Learning outcomes: Background checkpoint <br><br>
@@ -112,9 +114,6 @@
                         </ol>
                     </td>
                     <td>
-<!--                        TODO: Add links-->
-                        Note<br>
-                        Slides<br>
                         <a href="https://finale.seas.harvard.edu/files/finale/files/an_evaluation_of_the_human-interpretability_of_explanation.pdf">An Evaluation of the Human-Interpretability of Explanation</a><br>
                         <a href="https://dl.acm.org/doi/pdf/10.1145/2939672.2939778">Why Should I Trust You?": Explaining the Predictions of Any Classifier</a><br>
                         <a href="https://arxiv.org/pdf/1703.01365.pdf">Axiomatic Attribution for Deep Networks</a>
@@ -129,8 +128,7 @@
 
                     </td>
                     <td>
-                        Note<br>
-                        Slides<br>
+                        <a href="slides/part1-week2-video01-explanations.pdf" target="_blank">Slides</a><br>
                         <a href="https://www.andrew.cmu.edu/user/danupam/datta-sen-zick-oakland16.pdf">Algorithmic Transparency via Quantitative Input Influence: Theory and Experiments with Learning Systems</a><br>
                         <a href="https://proceedings.neurips.cc/paper/2017/file/8a20a8621978632d76c43dfd28b67767-Paper.pdf">A Unified Approach to Interpreting Model Predictions</a><
 
@@ -141,14 +139,31 @@
 
                 <tr>
                     <td>Thu Apr 8</td>
-                    <td>Intro to Homework 2 <br> TBD
+                    <td>Intro to Homework 2 <br>
+                    
                     </td>
+                    
                     <td>
-                        Slides
+                        <a href="slides/CS329T_Lab2.pdf" target="_blank">Slides</a>
                     </td>
-                    <td>Lab<br>Homework 1 due</td>
+                    <td>Lab</td>
                 </tr>
-
+                <tr>
+                    <td>Fri Apr 9</td>
+                    <td>Homework 1 due</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Sat Apr 10</td>
+                    <td>Homework 2</td>
+                    <td></td>
+                     <td>Homework 2 <font color="green">Released:</font><br>
+                        [<a href="homeworks/hw2/CS329T_HW2.pdf" target="_blank">pdf</a>]<br>
+                        [<a href="homeworks/hw2/CS329T_HW2_Code.zip">Code</a>]<br>
+                        [<a href="homeworks/hw2/CS329T_HW2_Written.zip">Written Template</a>]
+                        <br><br>
+                </tr>
                 <tr>
                     <td>Mon Apr 12</td>
                     <td>Week 3 Presentation topics: <br>
@@ -160,7 +175,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
                         <a href="https://arxiv.org/pdf/2002.07985.pdf">Interpreting Interpretations: Organizing Attribution Methods by Criteria</a><br>
                         <a href="https://papers.nips.cc/paper/2018/file/8a7129b8f3edd95b7d969dfc2c8e9d9d-Paper.pdf">Representer point selection for DNN</a><br>
@@ -176,8 +190,7 @@
                     </td>
 
                     <td>
-                        Note<br>
-                        Slides<br>
+                        <a href="slides/explanations-Week2.pdf" target="_blank">Slides</a><br><br>
                         <a href="https://arxiv.org/pdf/1902.03129.pdf">Towards Automatic Concept-based Explanations</a><br>
                         <a href="https://arxiv.org/abs/1802.03788">Influence-Directed Explanations for CNNs</a>
 
@@ -187,10 +200,10 @@
 
                 <tr>
                     <td>Thu Apr 15</td>
-                    <td>Homework 2 Q/A <br>TBD
+                    <td>Homework 2 Q/A <br>
                     </td>
                     <td>
-                        Slides
+                        <a href="slides/CS329T_Lab3.pdf" target="_blank">Slides</a>
                     </td>
                     <td>Lab
                 </tr>
@@ -212,7 +225,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
                         <a href="https://pdfs.semanticscholar.org/1d17/4f0e3c391368d0f3384a144a6c7487f2a143.pdf?_ga=2.198712170.499045504.1611253703-113508275.1611253703">Big Data's Disparate Impact</a><br>
                         <a href="https://arxiv.org/pdf/1412.3756v3.pdf">Certifying and Eliminating Disparate Impact</a><br>
@@ -227,12 +239,11 @@
                     <td>
                         <ol>
                             How fair do we need to be? Disparate impact/connections to legal sector<br>
-                            Problems with measuring fairness in the real world, Sharad Goel’s work<br>
+                            Problems with measuring fairness in the real world<br>
                         </ol>
                     </td>
 
                     <td>
-                        Note<br>
                         Slides<br>
                         <a href="https://arxiv.org/abs/1412.3756">Certifying and removing disparate impact</a><br>
                         <a href="https://arxiv.org/pdf/1808.00023.pdf">The Measure and Mismeasure of Fairness: A Critical Review of Fair Machine Learning</a>
@@ -261,9 +272,8 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
-                        <a href="Mitigating Unwanted Biases with Adversarial Learning">Mitigation with Adversarial Learning</a><br>
+                        <a href="https://arxiv.org/abs/1801.07593">Mitigation with Adversarial Learning</a><br>
                         <a href="http://papers.nips.cc/paper/6228-man-is-to-computer-programmer-as-woman-is-to-homemaker-debiasing-word-embeddings.pdf">Man is to Computer Programmer as Woman is to Homemaker?</a><br>
                         <a href="https://arxiv.org/abs/1807.11714">Gender Bias in Neural Natural Language Processing</a>
 
@@ -278,7 +288,6 @@
                     </td>
 
                     <td>
-                        Note<br>
                         Slides<br>
                         <a href="http://opus.bath.ac.uk/55288/4/CaliskanEtAl_authors_full.pdf">Human-like Bias in Language Models</a><br>
                         <a href="https://arxiv.org/ftp/arxiv/papers/2010/2010.07023.pdf">Understanding bias in facial recognition technologies</a>
@@ -314,7 +323,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
                         <a href="http://arxiv.org/pdf/1705.07807.pdf">Use Privacy in Data-Driven Systems: Theory and Experiments with Machine Learnt Programs</a><br>
                         <a href="https://www.comp.nus.edu.sg/~reza/files/Shokri-SP2017.pdf">Membership Inference Attacks Against Machine Learning Models</a><br>
@@ -331,7 +339,6 @@
                     </td>
 
                     <td>
-                        Note<br>
                         Slides<br>
                         <a href="http://proceedings.mlr.press/v97/sablayrolles19a/sablayrolles19a.pdf">White-box vs Black-box: Bayes Optimal Strategies for Membership Inference</a><br>
 
@@ -360,7 +367,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
                         <a href="https://core.ac.uk/download/pdf/9713419.pdf">Quantifying Location Privacy</a><br>
                         <a href="https://arxiv.org/pdf/1812.00910">Comprehensive Privacy Analysis of Deep Learning: Stand-alone and Federated Learning under Passive and Active White-box Inference Attacks</a><br>
@@ -380,7 +386,6 @@
                     </td>
 
                     <td>
-                        Note<br>
                         Slides<br>
                         <a href="https://link.springer.com/chapter/10.1007/978-3-540-79228-4_1">Differential Privacy: A Survey of Results</a><br>
                         <a href="http://www.cse.psu.edu/~duk17/papers/nflprivacy.pdf">No Free Lunch in Data Privacy</a>
@@ -417,7 +422,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
                         <a href="https://arxiv.org/pdf/1511.07528.pdf">The Limitations of DL in Adversarial Settings</a><br>
                         <a href="https://arxiv.org/pdf/1608.04644">Towards Evaluating the Robustness of Neural Networks</a><br>
@@ -437,7 +441,6 @@
                     </td>
 
                     <td>
-                        Note<br>
                         Slides<br>
                         <a href="https://arxiv.org/pdf/1905.02175.pdf">Adversarial Examples Are Not Bugs, They Are Features</a><br>
 
@@ -466,7 +469,6 @@
                     </td>
                     <td>
 <!--                        TODO: Add links-->
-                        Note<br>
                         Slides<br>
                         <a href="https://arxiv.org/pdf/1706.06083.pdf">Towards Deep Learning Models Resistant to Adversarial Attacks</a><br>
                         <a href="https://arxiv.org/pdf/1710.10547.pdf">Explanations can be manipulated and geometry is to blame</a><br>
@@ -488,7 +490,6 @@
                     </td>
 
                     <td>
-                        Note<br>
                         Slides<br>
                         <a href="https://arxiv.org/abs/2002.04742">Fast Geometric Projections for Local Robustness Certification</a><br>
                         <a href="https://arxiv.org/abs/1911.02508">Fooling LIME and SHAP: Adversarial Attacks on Post hoc Explanation Methods</a>
